Refactor code structure for improved readability and maintainability

--- a/angular.json
+++ b/angular.json
@@ -58,6 +58,11 @@
                             {
                                 "glob": "**/*",
                                 "input": "public"
+                            },
+                            {
+                                "glob": "**/*",
+                                "input": "src/assets",
+                                "output": "/assets/"
                             }
                         ],
                         "styles": [
@@ -121,6 +126,11 @@
                             {
                                 "glob": "**/*",
                                 "input": "public"
+                            },
+                            {
+                                "glob": "**/*",
+                                "input": "src/assets",
+                                "output": "/assets/"
                             }
                         ],
                         "styles": [
