Add favicon images, site manifest, robots.txt, and sitemap.xml
- Added favicon-16x16.png, favicon-32x32.png, and favicon.ico to enhance site branding.
- Created site.webmanifest for better integration with mobile devices and browsers.
- Added robots.txt to manage web crawler access and specify crawl delay.
- Implemented sitemap.xml to improve SEO and provide search engines with site structure.

--- a/angular.json
+++ b/angular.json
@@ -63,7 +63,10 @@
                                 "glob": "**/*",
                                 "input": "src/assets",
                                 "output": "/assets/"
-                            }
+                            },
+                            "src/robots.txt",
+                            "src/sitemap.xml",
+                            "src/manifest.json"
                         ],
                         "styles": [
                             "src/styles.scss"
