Enhance GitHub Star Banner with minimized state and expand functionality; update portfolio service statuses; adjust animation durations and styles; add .vscode settings for file exclusions.

--- a/package.json
+++ b/package.json
@@ -1,50 +1,90 @@
 {
-  "name": "pro-folio",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^18.0.0",
-    "@angular/cdk": "^18.2.14",
-    "@angular/common": "^18.0.0",
-    "@angular/compiler": "^18.0.0",
-    "@angular/core": "^18.0.0",
-    "@angular/forms": "^18.0.0",
-    "@angular/localize": "^18.2.14",
-    "@angular/material": "^18.2.14",
-    "@angular/platform-browser": "^18.0.0",
-    "@angular/platform-browser-dynamic": "^18.0.0",
-    "@angular/router": "^18.0.0",
-    "@angular/ssr": "^20.3.9",
-    "@nguniversal/express-engine": "^16.2.0",
-    "@ngx-translate/core": "^17.0.0",
-    "@ngx-translate/http-loader": "^17.0.0",
-    "@tsparticles/angular": "^3.0.0",
-    "aos": "^2.3.4",
-    "gsap": "^3.13.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "tsparticles": "^3.9.1",
-    "zone.js": "~0.14.3"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.0",
-    "@angular/cli": "^18.0.0",
-    "@angular/compiler-cli": "^18.0.0",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2",
-    "wrangler": "^4.47.0"
-  }
+    "name": "younes-mrabti-portfolio",
+    "version": "1.0.0",
+    "description": "Professional portfolio showcasing Younes MRABTI's expertise in Full Stack Development, GIS Solutions, and Mobile Applications. Built with Angular 18, featuring modern animations and multilingual support.",
+    "main": "src/main.ts",
+    "author": {
+        "name": "Younes MRABTI",
+        "email": "contact@younesmrabti.dev",
+        "url": "https://younesmrabti.dev"
+    },
+    "license": "MIT",
+    "keywords": [
+        "portfolio",
+        "full-stack-developer",
+        "angular",
+        "gis-developer",
+        "mobile-development",
+        "flutter",
+        "dotnet",
+        "javascript",
+        "typescript",
+        "web-development",
+        "geospatial",
+        "arcgis",
+        "qgis",
+        "younes-mrabti",
+        "professional-portfolio",
+        "software-engineer",
+        "developer-portfolio"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ymrabti/profolio.git"
+    },
+    "bugs": {
+        "url": "https://github.com/ymrabti/profolio/issues"
+    },
+    "homepage": "https://younesmrabti.dev",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "watch": "ng build --watch --configuration development",
+        "predeploy": "ng build --configuration production",
+        "deploy": "wrangler pages deploy dist/pro-folio/browser --branch=main",
+        "deploy:staging": "wrangler pages deploy dist/pro-folio/browser --branch=main --env staging",
+        "deploy:production": "wrangler pages deploy dist/pro-folio/browser --branch=main --env production",
+        "preview": "wrangler pages dev dist/pro-folio/browser",
+        "test": "ng test"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^18.0.0",
+        "@angular/cdk": "^18.2.14",
+        "@angular/common": "^18.0.0",
+        "@angular/compiler": "^18.0.0",
+        "@angular/core": "^18.0.0",
+        "@angular/forms": "^18.0.0",
+        "@angular/localize": "^18.2.14",
+        "@angular/material": "^18.2.14",
+        "@angular/platform-browser": "^18.0.0",
+        "@angular/platform-browser-dynamic": "^18.0.0",
+        "@angular/router": "^18.0.0",
+        "@angular/ssr": "^20.3.9",
+        "@nguniversal/express-engine": "^16.2.0",
+        "@ngx-translate/core": "^17.0.0",
+        "@ngx-translate/http-loader": "^17.0.0",
+        "@tsparticles/angular": "^3.0.0",
+        "aos": "^2.3.4",
+        "gsap": "^3.13.0",
+        "rxjs": "~7.8.0",
+        "tslib": "^2.3.0",
+        "tsparticles": "^3.9.1",
+        "zone.js": "~0.14.3"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^18.0.0",
+        "@angular/cli": "^18.0.0",
+        "@angular/compiler-cli": "^18.0.0",
+        "@types/jasmine": "~5.1.0",
+        "jasmine-core": "~5.1.0",
+        "karma": "~6.4.0",
+        "karma-chrome-launcher": "~3.2.0",
+        "karma-coverage": "~2.2.0",
+        "karma-jasmine": "~5.1.0",
+        "karma-jasmine-html-reporter": "~2.1.0",
+        "typescript": "~5.4.2",
+        "wrangler": "^4.47.0"
+    }
 }
